--- a/S&P500_DADS5001.ipynb
+++ b/S&P500_DADS5001.ipynb
@@ -560,7 +560,7 @@
     }
    ],
    "source": [
-    "#วาดกราฟ Market Cap ของแต่ละ Sector\n",
+    "#กราฟ Market Cap ของแต่ละ Sector\n",
     "\n",
     "# Define the colors for each sector\n",
     "colors = ['#ad8b67', '#7c5d3f', '#c3a06e', '#a4774a', '#8c6239', '#e1c699', '#bda073', '#c0b283', '#9a7e5c', '#8e6c4b', '#b3975d', '#af8f49', '#b28e66', '#6e4c1e']\n",
